Use QTemporaryFile instead of KTemporaryFile, since the latter requires a valid KComponentData object which is not available when the QImageIO plugin is used in Qt applications (e.g. Lyx).

BUG: 156957

svn path=/trunk/KDE/kdelibs/; revision=768782